--- a/Task-1_Landing_page(Burger-site)/burger.html
+++ b/Task-1_Landing_page(Burger-site)/burger.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link
+      rel="shortcut icon"
+      href="./images/burger_favicon.jpg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/section.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
@@ -40,7 +45,7 @@
       </div>
       <div class="image">
         <img
-          src="./images/1.png"
+          src="./images/burger.png"
           alt=""
           data-speed="3"
           class="move"
