--- a/PRODIGY_WD_05/weather.html
+++ b/PRODIGY_WD_05/weather.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather_Webapp</title>
+    <link
+      rel="shortcut icon"
+      href="./images/download.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="weather.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
